Removing  KeepLambdaWarmStack from default optional stacks, changed the way the stack in deployed and checkstyle fixes